RESOLVED FIXED69950
REGRESSION: Printing is broken because of unsplittable buginess
https://bugs.webkit.org/show_bug.cgi?id=69950
Summary REGRESSION: Printing is broken because of unsplittable buginess
Dave Hyatt
Reported 2011-10-12 12:32:46 PDT
Printing layout tests are failing. Need to make sure we don't think of the RenderView as a writing mode root.
Attachments
Patch (4.33 KB, patch)
2011-10-12 12:35 PDT, Dave Hyatt
dglazkov: review+
Dave Hyatt
Comment 1 2011-10-12 12:35:38 PDT
Dave Hyatt
Comment 2 2011-10-12 12:44:37 PDT
Fixed in r97289.
Note You need to log in before you can comment on or make changes to this bug.