https://bugs.webkit.org/show_bug.cgi?id=69950

REGRESSION: Printing broken because of the isWritingModeRoot addition for unsplittable
paginated content. Make sure not to include the RenderView when checking for writing mode
roots. We only care about children that differ from their parents.

Reviewed by Dimitri Glazkov.

* rendering/LayoutState.cpp:
(WebCore::LayoutState::LayoutState):
* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::adjustForUnsplittableChild):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::isUnsplittableForPagination):
* rendering/RenderBox.h:



Canonical link: https://commits.webkit.org/86020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97289 268f45cc-cd09-0410-ab3c-d52691b4dbfc